--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,24 @@
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
+
 <body>
+  <header class="site-header">
+    <div class="container site-header__container">
+      <a href="index.html" class="site-header__logo logo">
+        <img class="logo__img" src="img/logo-white.svg" alt="My team logo" width="160" height="40">
+        <nav class="site-header__sitenav sitenav">
+          <ul class="sitenav__list">
+            <li class="sitenav__item"><a class="sitenav__link" href="#">home</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="#">about</a></li>
+          </ul>
+        </nav>
+        <a class="button site-header__button" href="#" >contact us</a>
+      </a>
+    </div>
+  </header>
 
   <script src="js/main.js"></script>
 </body>
+
 </html>
