--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Team Project</title>
+  <!-- Favicon -->
+  <link rel="icon" href="img/favicon.svg">
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/normalize.css">
