Add hero section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Team Project</title>
+  
   <!-- Favicon -->
   <link rel="icon" href="img/favicon.svg">
 
@@ -16,6 +17,7 @@
 </head>
 
 <body>
+  <!-- HEADER -->
   <header class="site-header">
     <div class="container site-header__container">
       <a href="index.html" class="site-header__logo logo">
@@ -26,10 +28,26 @@
             <li class="sitenav__item"><a class="sitenav__link" href="#">about</a></li>
           </ul>
         </nav>
-        <a class="button site-header__button" href="#" >contact us</a>
+        <a class="button site-header__button" href="#">contact us</a>
       </a>
     </div>
   </header>
+
+  <!-- HERO -->
+  <div class="hero">
+    <div class="hero__container container">
+      <div class="hero__inner">
+        <h1 class="hero__title">Find the <br> best <span class="hero__title--highlighted">talent</span></h1>
+        <div class="hero__description">
+          <div class="hero__line"></div>
+          <p class="hero-text">
+            Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the
+            abundance of global talent. We’re about to change that.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="js/main.js"></script>
 </body>
