Add services section last parts

--- a/index.html
+++ b/index.html
@@ -33,69 +33,69 @@
     </div>
   </header>
 
-  <!-- HERO -->
-  <div class="hero">
-    <div class="hero__container container">
-      <div class="hero__inner">
-        <h1 class="hero__title">Find the <br> best <span class="hero__title--highlighted">talent</span></h1>
-        <div class="hero__description">
-          <div class="hero__line"></div>
-          <p class="hero-text">
-            Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into
-            the
-            abundance of global talent. We’re about to change that.
-          </p>
+  <main class="main-content">
+    <!-- HERO -->
+    <div class="hero">
+      <div class="hero__container container">
+        <div class="hero__inner">
+          <h1 class="hero__title">Find the <br> best <span class="hero__title--highlighted">talent</span></h1>
+          <div class="hero__description">
+            <div class="hero__line line"></div>
+            <p class="hero-text">
+              Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into
+              the
+              abundance of global talent. We’re about to change that.
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-
-  <!-- SERVICES-SECTION -->
-
-  <div class="services">
-    <div class="container">
-      <div class="services__inner">
-        <h2 class="services__title">
-          Build & manage distributed teams like no one else.
-        </h2>
-        <!-- list -->
-        <ul class="services__list">
-          <!-- items -->
-          <li class="services__item">
-            <img class="services__icon" src="img/services/icon-feature-experience.svg" alt="icon-feature-experience"
-              width="72" height="72">
-            <div class="services__item-description">
-              <h3 class="services__item-title">Experienced Individuals</h3>
-              <p class="services__item-text">
-                Our network is made up of highly experienced professionals who are passionate about what they do.
-              </p>
-            </div>
-          </li>
-          <li class="services__item">
-            <img class="services__icon" src="img/services/icon-feature-implementation.svg" alt="icon-feature-experience"
-              width="72" height="72">
-            <div class="services__item-description">
-              <h3 class="services__item-title">Easy to Implement</h3>
-              <p class="services__item-text">
-                Our processes have been refined over years of implementation meaning our teams always deliver.
-              </p>
-            </div>
-          </li>
-          <li class="services__item">
-            <img class="services__icon" src="img/services/icon-feature-productivity.svg" alt="icon-feature-experience"
-              width="72" height="72">
-            <div class="services__item-description">
-              <h3 class="services__item-title">Enhanced Productivity</h3>
-              <p class="services__item-text">
-                Our customized platform with in-built analytics helps you manage your distributed teams.
-              </p>
-            </div>
-          </li>
-        </ul>
+    <!-- SERVICES-SECTION -->
+    <div class="services">
+      <div class="services__container container">
+        <div class="line services-line"></div>
+        <div class="services__inner">
+          <h2 class="services__title">
+            Build & manage distributed teams like no one else.
+          </h2>
+    
+          <ul class="services__list">
+    
+            <li class="services__item">
+              <img class="services__icon" src="img/services/icon-feature-experience.svg" alt="icon-feature-experience"
+                width="72" height="72">
+              <div class="services__item-description">
+                <h3 class="services__item-title">Experienced Individuals</h3>
+                <p class="services__item-text">
+                  Our network is made up of highly experienced professionals who are passionate about what they do.
+                </p>
+              </div>
+            </li>
+            <li class="services__item">
+              <img class="services__icon" src="img/services/icon-feature-implementation.svg" alt="icon-feature-experience"
+                width="72" height="72">
+              <div class="services__item-description">
+                <h3 class="services__item-title">Easy to Implement</h3>
+                <p class="services__item-text">
+                  Our processes have been refined over years of implementation meaning our teams always deliver.
+                </p>
+              </div>
+            </li>
+            <li class="services__item">
+              <img class="services__icon" src="img/services/icon-feature-productivity.svg" alt="icon-feature-experience"
+                width="72" height="72">
+              <div class="services__item-description">
+                <h3 class="services__item-title">Enhanced Productivity</h3>
+                <p class="services__item-text">
+                  Our customized platform with in-built analytics helps you manage your distributed teams.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
+  </main>
   <script src="js/main.js"></script>
 </body>
 
