Add success stories section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
           <div class="hero__description">
             <div class="hero__line line"></div>
             <p class="hero-text">
-              Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into
+              Finding the right people and building high performing teams can be hard. Most companies aren’t tapping
+              into
               the
               abundance of global talent. We’re about to change that.
             </p>
@@ -58,9 +59,9 @@
           <h2 class="services__title">
             Build & manage distributed teams like no one else.
           </h2>
-    
+
           <ul class="services__list">
-    
+
             <li class="services__item">
               <img class="services__icon" src="img/services/icon-feature-experience.svg" alt="icon-feature-experience"
                 width="72" height="72">
@@ -72,8 +73,8 @@
               </div>
             </li>
             <li class="services__item">
-              <img class="services__icon" src="img/services/icon-feature-implementation.svg" alt="icon-feature-experience"
-                width="72" height="72">
+              <img class="services__icon" src="img/services/icon-feature-implementation.svg"
+                alt="icon-feature-experience" width="72" height="72">
               <div class="services__item-description">
                 <h3 class="services__item-title">Easy to Implement</h3>
                 <p class="services__item-text">
@@ -95,6 +96,64 @@
         </div>
       </div>
     </div>
+
+    <!-- SUCCESS STORIES -->
+    <div class="success-stories">
+      <div class="success-stories__container container">
+        <h2 class="success-stories__title">
+          Delivering real results for top <br> companies. Some of our <span class="success-stories__highlighted-text">success
+            stories.</span>
+        </h2>
+        <!-- stories list -->
+        <div class="success-stories__list">
+          <div class="success-stories__item">
+            <p class="success-stories__text">
+              “The team perfectly fit the specialized skill set required. They focused on the most essential features
+              helping us launch the platform eight months faster than planned.”
+            </p>
+            <div class="success-stories__author">
+              <h3 class="author-title">Kady Baker</h3>
+              <p class="author-position">
+                Product Manager at Bookmark
+              </p>
+            </div>
+            <img class="author-img" src="img/success-stories/kady.png" alt="Author image" width="72" height="72"
+              srcset="img/success-stories/kady.png 1x, img/success-stories/kady@2x.png 2x">
+          </div>
+          <div class="success-stories__item">
+            <p class="success-stories__text">
+              “We needed to automate our entire onboarding process. The team came in and built out the whole journey.
+              Since going live, user retention has gone through the roof!”
+            </p>
+            <div class="success-stories__author">
+              <h3 class="author-title">Aiysha Reese</h3>
+              <p class="author-position">
+                Founder of Manage
+              </p>
+            </div>
+            <img class="author-img" src="img/success-stories/aisha.png" alt="Author image" width="72" height="72"
+              srcset="img/success-stories/aisha.png 1x, img/success-stories/aisha@2x.png 2x">
+          </div>
+          <div class="success-stories__item">
+            <p class="success-stories__text">
+              “Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch
+              was an instant success with 100k downloads in the first month.”
+            </p>
+            <div class="success-stories__author">
+              <h3 class="author-title">Arthur Clarke</h3>
+              <p class="author-position">
+                Co-founder of MyPhysio
+              </p>
+            </div>
+            <img class="author-img" src="img/success-stories/arthur.png" alt="Author image" width="72" height="72"
+              srcset="img/success-stories/arthur.png 1x, img/success-stories/arthur@2x.png 2x">
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+
   </main>
   <script src="js/main.js"></script>
 </body>
