Add cta and extra global styles for buttons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="sitenav__item"><a class="sitenav__link" href="#">about</a></li>
           </ul>
         </nav>
-        <a class="button site-header__button" href="#">contact us</a>
+        <a class="button button--white site-header__button" href="#">contact us</a>
       </a>
     </div>
   </header>
@@ -150,10 +150,17 @@
           </div>
         </div>
 
-
       </div>
     </div>
 
+    <div class="cta">
+      <div class="container cta__container">
+        <div class="cta__inner">
+          <h2 class="cta__title">Ready to get started?</h2>
+          <a class="button button--green" href="#">contact us</a>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="js/main.js"></script>
 </body>
